--- a/src/package.json
+++ b/src/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "homepage": "https:https://ogbudugodwin.github.io/My-React-Project/",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
