--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
- {
+{
   "name": "my-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https:https://ogbudugodwin.github.io/My-React-Project/",
+  "homepage": "my-app",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -15,7 +15,8 @@
   "dependencies": {
     "axios": "^1.8.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
